--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  firebase_storage:
   flutter:
     sdk: flutter
 
@@ -36,6 +37,10 @@ dependencies:
   scoped_model: ^0.3.0
   path_provider: ^0.4.1
   url_launcher: ^3.0.3
+  firebase_auth: ^0.15.3+1
+  cloud_firestore: ^0.13.7
+
+
 
 
 
