--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   url_launcher: ^3.0.3
   firebase_auth: ^0.15.3+1
   cloud_firestore: ^0.13.7
+  firebase_core: ^0.4.3+2
+  firebase_database: ^3.1.5
+
 
 
 
